# Empirical-Analysis-AGP-Permutominoes

./: README.md
src/: ._distr_Inflate.c  CMakeLists.txt  DCEL.cpp  DCEL.hpp  README  get_data.sh  graph_analysis_data.py  main.cpp  pipeline.sh  solver.cpp  solver.hpp  swerc_inflate_cut.c
src/data/data0_10/: all_solutions.txt  removal2  test  test.tex  test_grid
src/data/data1000_1000/: info.txt  removal1  removal10  removal100  removal101  removal102  removal103  removal104  removal105  removal106  removal107  removal108  removal109  removal11  removal110  removal111  removal112  removal113  removal114  removal115  removal116  removal117  removal118  removal119  removal12  removal120  removal121  removal122  removal123  removal124  removal125  removal126  removal127  removal128  removal129  removal13  removal130  removal131  removal132  removal133  (+461 more)
src/data/data1001_1000/: info.txt  removal1  removal10  removal100  removal101  removal102  removal103  removal104  removal105  removal106  removal107  removal108  removal109  removal11  removal110  removal111  removal112  removal113  removal114  removal115  removal116  removal117  removal118  removal119  removal12  removal120  removal121  removal122  removal123  removal124  removal125  removal126  removal127  removal128  removal129  removal13  removal130  removal131  removal132  removal133  (+461 more)
src/data/data1002_1000/: info.txt  removal1  removal10  removal100  removal101  removal102  removal103  removal104  removal105  removal106  removal107  removal108  removal109  removal11  removal110  removal111  removal112  removal113  (+483 more)
(+382811 files in other folders)
